force-app/main/default/objects/Case_Customer_Account__c/Case_Customer_Account__c.object-meta.xml
<CustomObject>
    <label>Case Customer Account</label>
    <nameField>
        <displayFormat>CCA-{0000000}</displayFormat>
        <label>Case Customer Account Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Customer Accounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>