force-app/main/default/objects/Case_Customer_Account__c/fields/Customer_Account__c.field-meta.xml
<CustomField>
    <fullName>Customer_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Account</label>
    <referenceTo>IM_Customer_Account__c</referenceTo>
    <relationshipLabel>Case Customer Accounts</relationshipLabel>
    <relationshipName>Case_Customer_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>