force-app/main/default/objects/Case_Customer_Account__c/fields/Include_on_Case__c.field-meta.xml
<CustomField>
    <fullName>Include_on_Case__c</fullName>
    <label>Include on Case?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Include</fullName>
                <default>true</default>
                <label>Include</label>
            </value>
            <value>
                <fullName>Exclude</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>